plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

bootJar {
    enabled = false
}

allprojects {
    group = 'com.iam'
    version = '0.0.1-SNAPSHOT'
    
    repositories {
        mavenCentral()
    }

}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        implementation 'io.hypersistence:hypersistence-tsid:2.1.2'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
    
    tasks.named('test') {
        // 각 서브 모듈의 classpath에서 mockito-core를 찾습니다.
        def mockitoAgent = configurations.testRuntimeClasspath.find { it.name.contains("mockito-core") }

        if (mockitoAgent) {
            // JVM 인자 적용
            jvmArgs "-javaagent:${mockitoAgent.absolutePath}", "-Xshare:off"

            // (선택 사항) 확실하게 하기 위해 동적 로딩 허용 옵션도 추가
            jvmArgs "-XX:+EnableDynamicAgentLoading"
        }

        useJUnitPlatform()
    }
}
